Type Browser: Added commands, moved logic to view model Changed color for highlighted inbound edges

--- a/sources/AssemblyVisualizer/AssemblyBrowser/Screens/GraphScreenView.xaml
+++ b/sources/AssemblyVisualizer/AssemblyBrowser/Screens/GraphScreenView.xaml
@@ -107,7 +107,7 @@
                                Value="InEdge" />
                         </MultiTrigger.Conditions>
                         <Setter Property="Foreground"
-                        Value="DarkGreen" />
+                        Value="#FF9900" />
                     </MultiTrigger>
                     <MultiTrigger>
                         <MultiTrigger.Conditions>
