--- a/sources/AssemblyVisualizer/DependencyBrowser/DependencyBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/DependencyBrowser/DependencyBrowserWindow.xaml
@@ -221,7 +221,7 @@
                                Value="InEdge" />
                         </MultiTrigger.Conditions>
                         <Setter Property="Foreground"
-                        Value="DarkGreen" />
+                        Value="#FF9900" />
                     </MultiTrigger>
                     <MultiTrigger>
                         <MultiTrigger.Conditions>
