--- a/sources/AssemblyVisualizer/TypeBrowser/TypeBrowserWindow.xaml
+++ b/sources/AssemblyVisualizer/TypeBrowser/TypeBrowserWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="AssemblyVisualizer.TypeBrowser.TypeBrowserWindow"
+﻿<Window x:Class="AssemblyVisualizer.InteractionBrowser.InteractionBrowserWindow"
         x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ZoomControl="clr-namespace:AssemblyVisualizer.Controls.ZoomControl" 
         xmlns:Graph="clr-namespace:AssemblyVisualizer.Controls.Graph" 
-        xmlns:TypeBrowser="clr-namespace:AssemblyVisualizer.TypeBrowser"
+        xmlns:InteractionBrowser="clr-namespace:AssemblyVisualizer.InteractionBrowser"
         xmlns:Converters="clr-namespace:AssemblyVisualizer.Controls.Graph.Converters"        
         Title="{Binding Title}" 
         Height="600" Width="800" 
@@ -205,7 +205,7 @@
                                  HideZoom="Collapsed"
                                  RequireCtrlForZoom="False"                                  
                                  TextOptions.TextFormattingMode="Ideal">
-            <TypeBrowser:MemberGraphLayout x:Name="graphLayout"                                             
+            <InteractionBrowser:MemberGraphLayout x:Name="graphLayout"                                             
                                            Margin="10" 
                                            Graph="{Binding Graph}"
                                            LayoutAlgorithmType="LinLog"
